fix: align summary list stacked action spacing

--- a/packages/toolkit/components/summary-list/_summary-list.scss
+++ b/packages/toolkit/components/summary-list/_summary-list.scss
@@ -77,7 +77,7 @@
 }
 
 .ofh-summary-list__actions {
-  margin-top: $ofh-size-4;
+  @include ofh-responsive-margin(16, 'top');
 
   @include mq($from: tablet) {
     margin-top: 0;
